--- a/OtamaTune/OtamaTune/Base.lproj/Main.storyboard
+++ b/OtamaTune/OtamaTune/Base.lproj/Main.storyboard
@@ -45,6 +45,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-32" y="146"/>
         </scene>
         <!--Tone-->
         <scene sceneID="RWp-FN-pwA">
